# SPlayer-Next

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.yaml  CLAUDE.md  Cargo.toml  README.md  USER_AGREEMENT.md  auto-eslint.mjs  components.d.ts  dev-app-update.yml  electron-builder.config.ts  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json  uno.config.ts
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml  dev.yml  issue-helper.yml  release.yml
demo/: audio-architecture.md  desktop-lyric-drag.md
electron/main/: index.ts
electron/preload/: index.d.ts  index.ts
native/audio-engine/: Cargo.toml  index.d.ts  package.json
native/media-ctrl/: Cargo.toml  index.d.ts  package.json
native/taskbar-lyric/: index.d.ts
public/fonts/: font.css
scripts/: build-native.ts  dev.ts  gen-license.ts
shared/defaults/: hotkeys.ts  settings.ts
shared/types/: apis.ts  hotkey.ts  lastfm.ts  library.ts  lyrics.ts  nowPlaying.ts  platform.ts  player.ts  plugin.ts  settings.ts  stats.ts  update.ts  window.ts
shared/utils/: accelerator.ts  lyric.ts  path.ts
src/: App.vue  env.d.ts  main.ts
src/apis/: netease.ts  qqmusic.ts
src/components/: SPerformanceMonitor.vue
src/composables/: useCopyText.ts  useDialog.ts  useDragSort.ts  useFavorite.ts  useFloatingPlayerBar.ts  useHeartMode.ts  useMultiSelect.ts  usePlayer.ts  usePlaylistPicker.ts  useQueuePanel.ts  useSystemFonts.ts  useToast.ts  useTrackMenu.ts  useWindowControls.ts
src/i18n/: index.ts
(+356 files in other folders)
