[workspace]
members = ["./native/audio-engine", "./native/media-ctrl"]
resolver = "3"

[patch.crates-io]
ffmpeg-sys-next = { git = "https://github.com/apoint123/rust-ffmpeg-sys" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
redundant_clone = "deny"
needless_collect = "warn"
large_enum_variant = "warn"
collapsible_if = "allow"
redundant_pattern_matching = "allow"

[profile.release]
lto = true
strip = "symbols"
